# basic-cmake-project-template

./: CMakeLists.txt  CMakePresets.json  conanfile.txt  myproject.code-workspace
src/: CMakeLists.txt  main.cpp
src/example/: example.cpp  example.h
test/: CMakeLists.txt  main.cpp
test/example/: example_unit_tests.cpp
test/example_test/: CMakeLists.txt  constexpr_tests.cpp  example_unit_tests.cpp  tests.cpp
